--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-  "presets": [ "es2015", "react"]
+  "presets": [
+    "react",
+    [
+      "es2015",
+      {
+        "loose": true
+      }
+    ]
+  ],
+  "plugins": [
+    "transform-runtime",
+    "transform-object-rest-spread"
+  ]
 }
