--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
   "name": "acms-react-captcha",
   "email": "lion.bond93@gmail.com",
-  "version": "1.0.9",
+  "version": "1.1.011",
   "description": "Very simple component for react captcha",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "src/index.js",
   "dependencies": {
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-script-loader": "0.0.1"
   },
+  "scripts": {
+    "build": "rm -rf lib && babel src --out-dir lib"
+  },
+  "peerDependencies": {
+    "react": ">=0.15.5"
+  },
   "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "webpack": "^1.12.9"
+    "babel-cli": "^6.0.0",
+    "babel-core": "^6.0.0",
+    "babel-eslint": "^7.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-register": "^6.23.0",
+    "babel-runtime": "^6.0.0",
+    "webpack": "~1.14.0"
   },
   "babel": {
     "presets": [
